--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
   "description": "DynCss-Parser",
   "type": "typo3-cms-extension",
   "require": {
-    "typo3/cms-core": ">=7.6.15,<10.0",
+    "typo3/cms-core": ">=7.6.15 || ^8.7 || ^9.5",
     "kaystrobach/dyncss": "*"
   },
   "require-dev": {
-    "typo3/cms": "^8.6",
-    "kaystrobach/dyncss": "^0.8.0"
+    "typo3/cms-core": "^9.5",
+    "kaystrobach/dyncss": "^0.9.0"
   },
   "replace": {
     "dyncss_less": "self.version",
